# mtgRater

./: .gitignore  LICENSE  README.md  certs.readme  compose-prod.yaml  compose.yaml  deploy.sh  git_README.md  nginx-prod.conf  nginx.conf
backend/: Cargo.toml  Dockerfile  README.Docker.md  compose.yaml
backend/db/: url.txt
backend/db/queries/: add_rating_entry.sql  get_ratings.sql  inc_rating.sql
backend/db/queries/init/: add_rating_entry.sql  get_ratings.sql  inc_rating.sql
backend/db/queries/migrations/: 0001_ratings_up.sql  0002_cards_up.sql
backend/queries/init/: add_rating_entry.sql  get_ratings.sql  inc_rating.sql  tables.sql
backend/resources/: collections.json  formats.json
backend/src/: collections.rs  init_db.rs  main.rs  server.rs  util.rs
backend/src/db/: init_db.rs  lib.rs  mod.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: collections.json  index.html
frontend/src/: App.css  App.tsx  collectionFilterToggles.tsx  globals.ts  index.css  index.tsx  theme.ts
frontend/src/mock/: backend.tsx
frontend/src/rater/: FormatRater.tsx  SetRater.tsx  card.tsx  collectionExportButton.tsx  collectionNavigator.tsx  collectionRater.tsx  formatRater.tsx  ratingBar.tsx  setData.ts
frontend/src/rater/collectionNavigator/: collectionNavigator.tsx  collectionNavigatorButton.tsx  collectionNavigatorSegment.tsx
frontend/src/server/: backend.ts
frontend/src/util/: programStore.ts  scryfallUtil.ts  scryfall_util.ts
prod/: README.md  backup_db.sh  compose.yaml  nginx.conf
prod/frontend/: nginx.conf
