[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
anyhow = "1.0"
serde = "1"
serde_json = "1"
reqwest = "0.11"
maplit = "1.0.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.5"
