[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio" , "postgres", "tls-rustls" ] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
anyhow = "1.0"
serde = "1"
serde_json = "1"    
reqwest = "0.11"
maplit = "1.0.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.5"
lru = "0.12.3"
axum-client-ip = "0.6.0"
